--- a/src/app/pages/news/news.component.html
+++ b/src/app/pages/news/news.component.html
@@ -1,6 +1,6 @@
-<div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 600px; background-image: url(assets/img/icons/common/stonk.jpg); background-size: cover; background-position: center top;">
+<div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 300px; background-image: url(assets/img/icons/common/stonk.jpg); background-size: cover; background-position: center top;">
   <!-- Mask -->
-  <span class="mask opacity-8" style="background: linear-gradient(to right,#673400, #834200, #964b00, #a4550a, #b6551d);"></span>
+  <!-- <span class="mask opacity-8" style="background: linear-gradient(to right,#673400, #834200, #964b00, #a4550a, #b6551d);"></span> -->
   <!-- Header container -->
   <div class="container-fluid d-flex align-items-center">
     <div class="row">
@@ -13,9 +13,12 @@
   </div>
 </div>
   
-  <div class="container-fluid mt--7">
-    <div *ngFor="let i of news" class="card shadow border-0" style="margin-top: 4em;">
-      <div class="card-body" style="min-height: 150px;">
+  <div class="container-fluid mt--7 col-10">
+    <!-- <div *ngFor="let i of news" class="card shadow border-0" style="margin-top: 4em;"> -->
+    <div *ngFor="let i of all_news" class="card shadow border-0" style="margin-top: 4em;">
+      <div class="card-body text-center" style="min-height: 150px;">
+        <strong><span [innerHTML]="i.title">{{i.title}}</span></strong>
+        <hr>
         <span [innerHTML]="i.content">{{i.content}}</span>
       </div>
     </div>
