--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,17 +2,17 @@
   <div class="row align-items-center justify-content-xl-between">
     <div class="col-xl-6">
       <div class="copyright text-center text-xl-left text-muted">
-        &copy; Web Team 2020 | E-Cell
+        &copy; Web Team 2021 | E-Cell
       </div>
     </div>
     <div class="col-xl-6">
       <ul class="nav nav-footer justify-content-center justify-content-xl-end">
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a href="/" class="nav-link" target="_blank">E-Cell</a>
-        </li>
-        <li class="nav-item">
+        </li> -->
+        <!-- <li class="nav-item">
           <a href="/enspace" class="nav-link" target="_blank">Blog</a>
-        </li>
+        </li> -->
         <!-- <li class="nav-item">
           <a href="#" class="nav-link" target="_blank">Developers</a>
         </li>
