--- a/src/app/pages/holding/holding.component.html
+++ b/src/app/pages/holding/holding.component.html
@@ -1,13 +1,52 @@
 <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 600px; background-image: url(assets/img/icons/common/stonk.jpg); background-size: cover; background-position: center top;">
   <!-- Mask -->
-  <span class="mask opacity-8" style="background: linear-gradient(to right,#673400, #834200, #964b00, #a4550a, #b6551d);"></span>
+  <!-- <span class="mask opacity-8" style="background: linear-gradient(to right,#673400, #834200, #964b00, #a4550a, #b6551d);"></span> -->
   <!-- Header container -->
-  <div class="container-fluid d-flex align-items-center">
-    <div class="row">
-      <div class="col-lg-7 col-md-10">
-        <!-- <h1 class="display-2 text-white">Hello {{fname}} {{lname}}</h1> -->
-        <!-- <p class="text-white mt-0 mb-5">ssss</p> -->
-        <!-- <a (click)="update_profile()" class="btn btn-info">Edit profile</a> -->
+  <div class="container-fluid">
+    <div class="header-body">
+      <div class="row">
+        <div class="col-xl-3 col-lg-6">
+          <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card-body">
+              <div class="row">
+                <div class="col">
+                  <h5 class="card-title text-uppercase text-muted mb-0  mt-0" style="font-size: 1rem;">Number of Holdings</h5>
+                  <span class="h2 font-weight-bold mb-0">{{count}}</span>
+                </div>
+                <div class="col-auto">
+                  <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
+                    <i class="fas fa-chart-pie"></i>
+                  </div>
+                </div>
+              </div>
+              <p class="mt-3 mb-0 text-muted text-sm">
+                <span class="text-danger mr-2"></span>
+                <span class="text-nowrap"></span>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-3 col-lg-6">
+          <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card-body">
+              <div class="row">
+                <div class="col">
+                  <h5 class="card-title text-uppercase text-muted mb-0  mt-0" style="font-size: 1rem;">Holding Value</h5>
+                  <span class="h2 font-weight-bold mb-0">{{net}}</span>
+                </div>
+                <div class="col-auto">
+                  <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
+                    <i class="fas fa-users"></i>
+                  </div>
+                </div>
+              </div>
+              <p class="mt-3 mb-0 text-muted text-sm">
+                <span class="text-warning mr-2"></span>
+                <span class="text-nowrap"></span>
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -19,18 +58,18 @@
       <div class="col">
         <div class="card shadow">
           <div class="card-header border-0">
-            <h3 class="mb-0">Holdings</h3>
-            <h5>List of Shares of Companies you own</h5>
+            <h3 class="mb-0 mt-0" style="font-size: 1.5rem;line-height: inherit;">Holdings</h3>
+            <h5 class="mt-0 mb-0" style="font-size: 1rem;line-height: inherit;">List of Shares of Companies you own</h5>
           </div>
           <div class="table-responsive">
             <table class="table align-items-center table-flush">
               <thead class="thead-light">
                 <tr>
                   <th scope="col">Name</th>
-                  <th scope="col">Current Market Price</th>
-                  <th scope="col">Code</th>
-                  <th scope="col">Shares Owned</th>
-                  <!-- <th scope="col">Quantity</th> -->
+                  <th scope="col" class="text-center">Current Market Price</th>
+                  <th scope="col" class="text-center">Code</th>
+                  <th scope="col" class="text-center"> Shares Owned</th>
+                  <th scope="col" class="text-center">Current Value</th>
                   <th scope="col"></th>
                 </tr>
               </thead>
@@ -46,20 +85,20 @@
                       </div>
                     </div>
                   </th>
-                  <td>
+                  <td class="text-center">
                     {{ company.company_cmp | currency:'INR'}}
                   </td>
-                  <td>
+                  <td class="text-center">
                     {{company.company_code}}
                   </td>
-                  <td>
+                  <td class="text-center">
                       {{company.quantity}}
                   </td>
-                  <!-- <td>
-                    <input type="number" min="0" name="Quantity" value="{{company.quantity}}">
-                  </td> -->
+                  <td class="text-center">
+                    {{company.curr | currency:'INR'}}
+                  </td>
                   <td class="text-right">
-                      <button (click)="bid(company)" class="btn btn-primary">Sell</button>
+                      <button (click)="bid(company)" class="btn btn-danger">Sell</button>
                   </td>
                 </tr>
               </tbody>
