--- a/src/app/pages/leaderboard/leaderboard.component.html
+++ b/src/app/pages/leaderboard/leaderboard.component.html
@@ -1,4 +1,5 @@
-<div class="header bg-gradient-danger pb-8 pt-5 pt-md-8">
+<div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 300px; background-image: url(assets/img/icons/common/stonk.jpg); background-size: cover; background-position: center top;">
+  <!-- <div class="header bg-gradient-danger pb-8 pt-5 pt-md-8"> -->
     <div class="container-fluid">
       <div class="header-body">
         <!-- Card stats -->
@@ -8,21 +9,24 @@
   <!-- Page content -->
   <div class="container-fluid mt--7">
     <!-- Table -->
-    <div class="row">
-      <div class="col-lg-7">
+    <div class="row justify-content-center">
+      <div class="col-lg-8">
         <div class="card shadow">
           <div class="card-header border-0">
-            <h3 class="mb-0">Leaderboard</h3>
-            <h5>Open Track</h5>
+            <h3 class="mb-0 mt-0" style="font-size: 1.5rem;line-height: inherit;">Leaderboard</h3>
+            <h5 class="m-0" style="font-size: 1rem;line-height: inherit;">Open Track</h5>
           </div>
-          <div class="table-responsive">
+          <div class="table-responsive" *ngIf="leaders.length==0">
+            <h3 style="font-size:2rem;" class="text-center">Leaderboard Will be launched soon</h3> 
+          </div>
+          <div class="table-responsive" *ngIf="leaders.length!=0">
             <table class="table align-items-center table-flush">
               <thead class="thead-light">
                 <tr>
                   <th scope="col">Name</th>
-                  <th scope="col">Cash</th>
+                  <th scope="col">Net Worth</th>
                   <th scope="col">Username</th>
-                  <th scope="col">City</th>
+                  <!-- <th scope="col">City</th> -->
                   <!-- <th scope="col"></th> -->
                 </tr>
               </thead>
@@ -45,33 +49,32 @@
                   <td>
                     {{leader.username}}
                   </td>
-                  <td>
+                  <!-- <td>
                     {{leader.city}}
-                  </td>
+                  </td> -->
                 </tr>
               </tbody>
             </table>
           </div>
+         
           <div class="card-footer py-4">
             
           </div>
         </div>
       </div>
-      <div class="col-lg-5">
+      <!-- <div class="col-lg-6">
         <div class="card shadow">
           <div class="card-header border-0">
-            <h3 class="mb-0">Leaderboard</h3>
-            <h5>IITB Track</h5>
+            <h3 class="mb-0 mt-0" style="font-size: 1.5rem;line-height: inherit;">Leaderboard</h3>
+            <h5 class="m-0" style="font-size: 1rem;line-height: inherit;">IITB Track</h5>
           </div>
           <div class="table-responsive">
             <table class="table align-items-center table-flush">
               <thead class="thead-light">
                 <tr>
                   <th scope="col">Name</th>
-                  <th scope="col">Cash</th>
+                  <th scope="col">Net Worth</th>
                   <th scope="col">Username</th>
-                  <!-- <th scope="col"></th>
-                  <th scope="col"></th> -->
                 </tr>
               </thead>
 
@@ -79,9 +82,6 @@
                 <tr *ngFor="let leader of iitb">
                   <th scope="row">
                     <div class="media align-items-center">
-                      <!-- <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
-                        <img alt="Image placeholder" src="../assets/img/theme/bootstrap.jpg">
-                      </a> -->
                       <div class="media-body">
                         <span class="mb-0 text-sm">{{leader.fname}} {{leader.lname}}</span>
                       </div>
@@ -101,7 +101,7 @@
             
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
   
