--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,5 @@
-<div class="header py-7 py-lg-8" style="background: linear-gradient(to right,#673400, #834200, #964b00, #a4550a, #b6551d);">
+<div class="header py-7 py-lg-8" >
+  <!-- style="background: linear-gradient(to right,#673400, #834200, #964b00, #a4550a, #b6551d);" -->
   <div class="container">
     <div class="header-body text-center mb-7">
       <div class="row justify-content-center">
@@ -9,11 +10,11 @@
       </div>
     </div>
   </div>
-  <div class="separator separator-bottom separator-skew zindex-100">
+  <!-- <div class="separator separator-bottom separator-skew zindex-100">
     <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
       <polygon class="fill-default" points="2560 0 2560 100 0 100"></polygon>
     </svg>
-  </div>
+  </div> -->
 </div>
 <!-- Page content -->
 <div class="container mt--8 pb-5">
@@ -22,33 +23,39 @@
       <div class="card bg-secondary shadow border-0">
         <div class="card-header bg-transparent pb-5">
           <div class="text-center text-dark">
-            <img class="right" style="width: 400px;  margin-top: -40px;" src="assets/img/icons/common/vsm_black.png">
-            <!-- <h1>Virtual Stock Market Simulator</h1> -->
+            <img *ngIf="show" class="right" style="width: 400px;  margin-top: -40px; margin-left: 45px;" src="./assets/img/Vsm-Logo-Dark.png">
+
+            <img *ngIf="!show" class="right" style="width: 400px;   margin-top: -40px;" src="./assets/img/Vsm-Logo-Dark.png">
           </div>
 
-          <div class="text-center" style="margin-top: -100px;">
-            by the Entrepreneurship Cell, IIT Bombay in association with 5paisa
+          <div class="text-center"
+            style="margin-top: -100px;">
+             By the Entrepreneurship Cell, IIT Bombay
           </div>
-
-
 
           <!-- <div class="text-center text-dark mb-4">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTCzR-pc_3udjq1Xaa7wd7t2CvtrKARQSDdcfF545pGOw&usqp=CAU&ec=45690269">
           </div> -->
-          
         </div>
-        <div class="card-body px-lg-5 py-lg-5">
+        <div class="card-body px-lg-5">
           <div class="text-muted text-center mt-2 mb-3"><small>Sign in with</small></div>
           <div class="btn-wrapper text-center">
-            <a href="javascript:void(0)" class="btn btn-neutral btn-icon" (click)="signInWithFB()">
-              <span class="btn-inner--icon"><img src="assets/img/icons/common/fb.svg"></span>
-              <span class="btn-inner--text">Facebook</span>
-            </a>
-            <a href="javascript:void(0)" class="btn btn-neutral btn-icon" (click)="signInWithGoogle()">
-              <span class="btn-inner--icon"><img src="assets/img/icons/common/google.svg"></span>
+            <a href="javascript:void(0)" class="btn btn-neutral btn-icon" (click)="signInWithGoogle()"  *ngIf="ready">
+              <span class="btn-inner--icon"><img src="https://2k21.s3.ap-south-1.amazonaws.com/google.svg"></span>
               <span class="btn-inner--text">Google</span>
             </a>
           </div>
+
+          <div class="text-center">
+            <br>
+            <a href="sec/login">
+
+            Try Other Sign In options
+
+            </a>
+
+          </div>
+
         </div>
       </div>
       <!-- <div class="row mt-3">
