--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,4 +1,5 @@
-<div class="header py-7 py-lg-8" style="background: linear-gradient(#8e9eab,#eef2f3);">
+<div class="header py-7 py-lg-8" >
+  <!-- style="background: linear-gradient(to right,#673400, #834200, #964b00, #a4550a, #b6551d);" -->
   <div class="container">
     <div class="header-body text-center mb-7">
       <div class="row justify-content-center">
@@ -9,18 +10,72 @@
       </div>
     </div>
   </div>
-  <div class="separator separator-bottom separator-skew zindex-100">
+  <!-- <div class="separator separator-bottom separator-skew zindex-100">
     <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
       <polygon class="fill-default" points="2560 0 2560 100 0 100"></polygon>
     </svg>
-  </div>
+  </div> -->
 </div>
 <!-- Page content -->
 <div class="container mt--8 pb-5">
   <div class="row justify-content-center">
     <div class="col-lg-5 col-md-7">
       <div class="card bg-secondary shadow border-0">
-        <iframe src="https://www.meraevents.com/ticketWidget?eventId=233968&ucode=organizer&wcode=9063CD-9063CD-333333-9063CD-&theme=1" width="100%" height="600px" frameborder="0px" ></iframe>
+        <div class="card-header bg-transparent pb-5">
+          <div class="text-center text-dark">
+            <img *ngIf="show" class="right" style="width: 400px;  margin-top: -40px; margin-left: 45px;" src="./assets/img/Vsm-Logo-Dark.png">
+
+            <img *ngIf="!show" class="right" style="width: 400px;   margin-top: -40px;" src="./assets/img/Vsm-Logo-Dark.png">
+          </div>
+
+          <div class="text-center"
+            style="margin-top: -100px;">
+             By the Entrepreneurship Cell, IIT Bombay
+          </div>
+
+          <!-- <div class="text-center text-dark mb-4">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTCzR-pc_3udjq1Xaa7wd7t2CvtrKARQSDdcfF545pGOw&usqp=CAU&ec=45690269">
+          </div> -->
+        </div>
+        <div class="card-body px-lg-5">
+          <div class="text-muted text-center mt-2 mb-3"><small>Sign in with</small></div>
+          <!-- <div class="btn-wrapper text-center">
+            <a href="javascript:void(0)" class="btn btn-neutral btn-icon" (click)="signInWithGoogle()"  *ngIf="ready">
+              <span class="btn-inner--icon"><img src="https://2k21.s3.ap-south-1.amazonaws.com/google.svg"></span>
+              <span class="btn-inner--text">Google</span>
+            </a>
+          </div> -->
+
+          <div class="col">
+            <label class="w-25">Username</label>
+            <input type="text" [(ngModel)]="username" name="username">
+          </div>
+
+          <div class="col">
+          <label class="w-25">Password</label>
+          <input type="password" [(ngModel)]="pass" name="pass">
+
+          <div class="col">
+            <label class="w-25">Confirm Password</label>
+            <input type="password" [(ngModel)]="confirm" name="pass">
+          <br>
+
+          <div class="justity-conent-center text-center">
+            <button class="btn btn-primary" (click)="submit()">Submit</button>
+          </div>
+
+        </div>
+
+        </div>
+      </div>
+      <!-- <div class="row mt-3">
+        <div class="col-6">
+          <a href="javascript:void(0)" class="text-light"><small>Forgot password?</small></a>
+        </div>
+        <div class="col-6 text-right">
+          <a href="javascript:void(0)" class="text-light"><small>Create new account</small></a>
+        </div>
+      </div> -->
     </div>
   </div>
 </div>
