--- a/src/app/pages/sec-login/sec-login.component.html
+++ b/src/app/pages/sec-login/sec-login.component.html
@@ -1,62 +1,84 @@
-<div class="header py-7 py-lg-8" style="background: linear-gradient(to right,#673400, #834200, #964b00, #a4550a, #b6551d);">
-    <div class="container">
-      <div class="header-body text-center mb-7">
-        <div class="row justify-content-center">
-          <div class="col-lg-5 col-md-6">
-            <!-- <h1 class="text-white">Welcome!</h1> -->
-            <!-- <p class="text-lead text-light">Use these forms to login or create new account in your project for free.</p> -->
-          </div>
+<audio autoplay *ngIf="aud">
+  <source src="./assets/Scam-1992-Ringtone_320(PaglaSongs).mp3" type="audio/mpeg">
+</audio> 
+
+
+<div class="header py-7 py-lg-8" >
+  <!-- style="background: linear-gradient(to right,#673400, #834200, #964b00, #a4550a, #b6551d);" -->
+  <div class="container">
+    <div class="header-body text-center mb-7">
+      <div class="row justify-content-center">
+        <div class="col-lg-5 col-md-6">
+          <!-- <h1 class="text-white">Welcome!</h1> -->
+          <!-- <p class="text-lead text-light">Use these forms to login or create new account in your project for free.</p> -->
         </div>
       </div>
     </div>
-    <div class="separator separator-bottom separator-skew zindex-100">
-      <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
-        <polygon class="fill-default" points="2560 0 2560 100 0 100"></polygon>
-      </svg>
-    </div>
   </div>
-  <!-- Page content -->
-  <div class="container mt--8 pb-5">
-    <div class="row justify-content-center">
-      <div class="col-lg-5 col-md-7">
-        <div class="card bg-secondary shadow border-0">
-          <div class="card-header bg-transparent pb-5">
-            <div class="text-center text-dark">
-              <img class="right" style="width: 400px;  margin-top: -40px;" src="assets/img/icons/common/vsm_black.png">
-              <!-- <h1>Virtual Stock Market Simulator</h1> -->
-            </div>
-  
+  <!-- <div class="separator separator-bottom separator-skew zindex-100">
+    <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
+      <polygon class="fill-default" points="2560 0 2560 100 0 100"></polygon>
+    </svg>
+  </div> -->
+</div>
+<!-- Page content -->
+<div class="container mt--8 pb-5">
+  <div class="row justify-content-center">
+    <div class="col-lg-5 col-md-7">
+      <div class="card bg-secondary shadow border-0">
+        <div class="card-header bg-transparent pb-5">
+          <div class="text-center text-dark">
+            <img *ngIf="show" class="right" style="width: 400px;  margin-top: -40px; margin-left: 45px;" src="./assets/img/Vsm-Logo-Dark.png">
 
-  
-  
-  
-            <!-- <div class="text-center text-dark mb-4">
-              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTCzR-pc_3udjq1Xaa7wd7t2CvtrKARQSDdcfF545pGOw&usqp=CAU&ec=45690269">
-            </div> -->
-            
+            <img *ngIf="!show" class="right" style="width: 400px;   margin-top: -40px;" src="./assets/img/Vsm-Logo-Dark.png">
           </div>
-          <div class="card-body px-lg-5 py-lg-5">
 
-            <div class="text-center" style="margin-top: -100px;">
-                <input type="text" [(ngModel)]="token">
-            </div>
-            <div class="text-muted text-center mt-2 mb-3"><small>Sign in with</small></div>
-            <div class="btn-wrapper text-center">
-              <a href="javascript:void(0)" class="btn btn-neutral btn-icon" (click)="saveToken()">
-                <span class="btn-inner--text">Login</span>
-              </a>
-            </div>
+          <div class="text-center"
+            style="margin-top: -100px;">
+             By the Entrepreneurship Cell, IIT Bombay
           </div>
+
+          <!-- <div class="text-center text-dark mb-4">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTCzR-pc_3udjq1Xaa7wd7t2CvtrKARQSDdcfF545pGOw&usqp=CAU&ec=45690269">
+          </div> -->
         </div>
-        <!-- <div class="row mt-3">
-          <div class="col-6">
-            <a href="javascript:void(0)" class="text-light"><small>Forgot password?</small></a>
+        <div class="card-body px-lg-5">
+          <div class="text-muted text-center mt-2 mb-3"><small>Sign in with</small></div>
+          <!-- <div class="btn-wrapper text-center">
+            <a href="javascript:void(0)" class="btn btn-neutral btn-icon" (click)="signInWithGoogle()"  *ngIf="ready">
+              <span class="btn-inner--icon"><img src="https://2k21.s3.ap-south-1.amazonaws.com/google.svg"></span>
+              <span class="btn-inner--text">Google</span>
+            </a>
+          </div> -->
+
+          <div class="col">
+            <label class="w-25">Username</label>
+            <input type="text" [(ngModel)]="username" name="username">
           </div>
-          <div class="col-6 text-right">
-            <a href="javascript:void(0)" class="text-light"><small>Create new account</small></a>
+
+
+          <div class="col">
+          <label class="w-25">Password</label>
+          <input type="password" [(ngModel)]="pass" name="pass">
+
+          <br>
+
+          <div class="justity-conent-center text-center">
+            <button class="btn btn-primary" (click)="submit()">Submit</button>
           </div>
-        </div> -->
+
+        </div>
+
+        </div>
       </div>
+      <!-- <div class="row mt-3">
+        <div class="col-6">
+          <a href="javascript:void(0)" class="text-light"><small>Forgot password?</small></a>
+        </div>
+        <div class="col-6 text-right">
+          <a href="javascript:void(0)" class="text-light"><small>Create new account</small></a>
+        </div>
+      </div> -->
     </div>
   </div>
-  
+</div>
