--- a/src/app/pages/sponser/sponser.component.html
+++ b/src/app/pages/sponser/sponser.component.html
@@ -1,6 +1,6 @@
 <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 450px; background-image: url(assets/img/icons/common/watch.jpg); background-size: cover; background-position: center top;">
   <!-- Mask -->
-  <span class="mask opacity-8" style="background: linear-gradient(to right,#673400, #834200, #964b00, #a4550a, #b6551d);"></span>
+  <!-- <span class="mask opacity-8" style="background: linear-gradient(to right,#673400, #834200, #964b00, #a4550a, #b6551d);"></span> -->
   <!-- Header container -->
   <div class="container-fluid d-flex align-items-center">
     <div class="row">
@@ -15,18 +15,27 @@
 <!-- Page content -->
 <div class="container-fluid mt--7">
   <div class="card shadow border-0">
-    <div class="container h-100" style="padding-top: 8em; padding-bottom: 8em;">
+    <div class="container h-100" style="padding-top: 2em; padding-bottom: 4em;">
       <div class="row h-100 justify-content-center align-items-center text-center">
         <form class="col-12">
-          <div class="form-group">
-            <h1 style="font-size: 2em;">COMING SOON</h1>
+          <div class="form-group row justify-content-center">
+            <!-- <h1 style="font-size: 2em;">COMING SOON</h1> -->
             <!-- <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"> -->
+            <div class="col-md-3" *ngFor="let i of temp">
+              <a href={{i.url}}>
+                <img src={{i.image}} alt="">
+                <br>
+                <p>
+                  {{i.name}}
+                </p>
+              </a>
+
+            </div>
           </div>
-          <hr>
-          <div class="form-group py-4">
-            <label for="formGroupExampleInput2">{{days}} Days, {{hr}} hours: {{min}} minutes: {{sec}} seconds</label>
-            <!-- <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input"> -->
-          </div>
+          <!-- <hr> -->
+          <!-- <div class="form-group py-4">
+            
+          </div> -->
         </form>   
       </div>
     </div>
